fixed dot grid z-index

--- a/src/components/Parallax/Parallax.module.scss
+++ b/src/components/Parallax/Parallax.module.scss
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 10;
+  z-index: -1;
   width: 100vw;
   height: 100vh;
 }
